--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,22 @@
 .App-logo {
-  animation: spin infinite 20s linear;
-  height: 80px;
+  height: 200px;
 }
 
 .App-header {
-  background-color: #222;
+  background-color: white;
   padding: 20px;
-  color: white;
+  color: black;
   text-align: center;
+}
+
+.App-header-text {
+  position: relative;
+  top: -45px;
+  font-size: 3rem;
+  font-weight: lighter;
+  font-family: 'Raleway', sans-serif;
 }
 
 .App-intro {
   font-size: large;
-}
-
-@keyframes spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
