--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,11 @@ body {
   padding: 1.5rem 2.5rem;
 }
 
+.result-text {
+  font-family: "Raleway";
+  font-weight: lighter;
+}
+
 /* Quiz Component */
 .answerOptions {
   margin: 0;
